# CryptoTradingPlatform

./: .gitignore  CMakeLists.txt  README.MD
src/: TradeLineItem.hpp  main.cpp
src/backtest/: BacktestEngine.cpp  BacktestEngine.hpp
src/config/: EnvReader.cpp  EnvReader.h  EnvReader.hpp
src/encryption/: EncryptionHelper.cpp  EncryptionHelper.hpp
src/exchanges/: BaseExchange.hpp  BaseOHLC.hpp  KrakenClient.cpp  KrakenClient.h
src/exchanges/coinbase/: CoinbaseClient.cpp  CoinbaseClient.hpp
src/exchanges/kraken/: KrakenCancelOrder.hpp  KrakenClient.cpp  KrakenClient.hpp  KrakenLoader.cpp  KrakenLoader.hpp  KrakenOHLC.cpp  KrakenOHLC.hpp  KrakenOrder.hpp  KrakenTrade.hpp  KrakenTradeInfo.hpp  OHLC.cpp  OHLC.hpp
src/strategy/: ActionPoint.hpp  BaseStrategy.cpp  BaseStrategy.hpp  BuyAndHold.cpp  BuyAndHold.hpp  MovingAverageCrossover.cpp  MovingAverageCrossover.hpp
src/strategy/moving_average/: MovingAverageCrossover.cpp  MovingAverageCrossover.hpp  MovingAverageTrade.hpp
src/time/: Clock.cpp  Clock.hpp  FixedClock.hpp  IClock.hpp  RealClock.hpp  time_concepts.hpp
tst/: CMakeLists.txt  CTestTestfile.cmake  Foo.cpp  Makefile  cmake_install.cmake
tst/encryption/: EncryptionHelperTest.cpp
